<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidFirstAtt</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="name">Макароны</string>
    <string name="review">Отзывов нет</string>
    <string name="time">5 min</string>
    <string name="info_holder">Пивнуха</string>
    <string name="work_time">12:00 - 11:00</string>
    <string name="address">Плехановская ул., 50, Воронеж, Воронежская обл.</string>

</resources>
